# Kafka_Chatroom

./: .env.example  Dockerfile  README.md  app.py  connect_to_db.py  docker-compose.yaml  kafka_consumer.py  kafka_producer.py  pyproject.toml
static/: chat.js
templates/: chat.html  login.html
